--- a/src/layouts/components/Setting/RadioRect.module.less
+++ b/src/layouts/components/Setting/RadioRect.module.less
@@ -1,6 +1,11 @@
 .radioRectPanel {
   display: flex;
   justify-content: space-between;
+
+  > div {
+    flex: 1 1;
+    margin: 0 10px;
+  }
 }
 
 .rectItem {
@@ -8,6 +13,10 @@
   padding: 8px;
   border-radius: 3px;
   cursor: pointer;
+  svg {
+    width: 100%;
+    height: 60px;  
+  }
 }
 
 .rectItemSelected {
