--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -61,6 +61,9 @@ code {
 .t-dialog__body, .t-dialog__body--icon, .t-dialog__body__icon {
   padding-bottom: var(--td-comp-margin-xxl);
 }
+.t-message__list.t-message-placement--top {
+  margin-top: 20px;
+}
 
 /************** functional class ***************/
 .hide {
